# edge-addition-planarity-suite

./: .gitignore  LICENSE.TXT  Makefile.am  README.md  autogen.sh  configure.ac  libplanarity.pc.in  planarity.1  test-samples.sh.in
.devcontainer/: Dockerfile  devcontainer.json  ensure-user.sh
.github/: pull_request_template.md
.github/workflows/: compile-warnings.yml  compiler-versions.yml  compilers.yml  dev-platforms.yml  os.yml  runtests.yml  sanitisers.yml  spelling.yml
TestSupport/: executePlanarity.py  g6_diff_finder.py  generate_graphs.bat  graphGenerationOrchestrator.py  graph_generation_orchestrator.py  planarity-runner.bat  planarity_orchestrator.py  planarity_runner.bat  testTableGenerator.py  test_table_generator.py
TestSupport/planaritytesting/: __init__.py  edge_deletion_analysis.py  g6_diff_finder.py  g6_generation_and_comparison_driver.py  graph.py  graph_generation_orchestrator.py  planarity_constants.py  planarity_leaks_analysis.py  planarity_orchestrator.py  planarity_output_parsing.py  planarity_testAllGraphs_orchestrator.py  planarity_testAllGraphs_output_parsing.py  planaritytesting_utils.py  test_table_generation_with_numInvalidOK.py  test_table_generator.py
c/: .cproject  appconst.h  g6-api-utilities.c  g6-api-utilities.h  g6-read-iterator.c  g6-read-iterator.h  g6-write-iterator.c  g6-write-iterator.h  graph.h  graphColorVertices.c  graphColorVertices.h  graphColorVertices.private.h  graphColorVertices_Extensions.c  graphDFSUtils.c  graphDrawPlanar.c  graphDrawPlanar.h  graphDrawPlanar.private.h  graphDrawPlanar_Extensions.c  graphEmbed.c  graphExtensions.c  graphExtensions.h  graphExtensions.private.h  graphFunctionTable.h  graphIO.c  graphIsolator.c  graphK23Search.c  graphK23Search.h  graphK23Search.private.h  graphK23Search_Extensions.c  graphK33Search.c  graphK33Search.h  graphK33Search.private.h  graphK33Search_Extensions.c  graphK4Search.c  graphK4Search.h  graphK4Search.private.h  graphK4Search_Extensions.c  graphLib.h  graphNonplanar.c  graphOuterplanarObstruction.c  (+19 more)
c/TestSupport/: graphGenerationOrchestrator.py
c/error/: 0053.txt
c/graphLib/: graph.c  graph.h  graph.private.h  graphDFSUtils.c  graphDFSUtils.h  graphDFSUtils.private.h  graphLib.c  graphLib.h  graphStructures.h  graphUtils.c  graphUtils.private.h  graphVertexInfo.private.h  listcoll.c
c/nauty/: makeg.c  outproc.c  outproc.h  testFramework.c  testFramework.h
c/planarityApp/: planarity.1  planarity.c  planarity.h  planarityCommandLine.c  planarityHelp.c  planarityMenu.c  planarityRandomGraphs.c  planaritySpecificGraph.c  planarityTestAllGraphs.c  planarityTestGraphFunctionality.c  planarityTransformGraph.c  planarityUtils.c  platformTime.h
c/samples/: K10.g6  K10.g6.0-based.AdjList.out.txt  K10.g6.0-based.AdjList.out.txt.0-based.G6.out.g6  K10.g6.0-based.AdjMat.out.txt  K23-minus-edge.AdjList.txt  K23.AdjList.txt  K33-minus-edge.AdjList.txt  K33.AdjList.txt  K4-minus-edge.AdjList.txt  K4.AdjList.txt  Makefile.am  N5-all.g6  N5-all.g6.0-based.AdjList.out.txt  N5-all.g6.0-based.AdjMat.out.txt  Petersen.0-based.txt  Petersen.0-based.txt.ColorVertices.out.txt  Petersen.0-based.txt.K4Search.out.txt  Petersen.0-based.txt.Outerplanarity.out.txt  Petersen.0-based.txt.Planarity.out.txt  Petersen.digraph.txt  Petersen.txt  Petersen.txt.ColorVertices.out.txt  Petersen.txt.K4Search.out.txt  Petersen.txt.Outerplanarity.out.txt  Petersen.txt.Planarity.out.txt  drawExample.0-based.txt  drawExample.0-based.txt.ColorVertices.out.txt  drawExample.0-based.txt.DrawPlanar.out.txt  drawExample.0-based.txt.DrawPlanar.out.txt.render.txt  drawExample.txt  drawExample.txt.ColorVertices.out.txt  drawExample.txt.DrawPlanar.out.txt  drawExample.txt.DrawPlanar.out.txt.render.txt  faceListComponents.0-based.out.txt  faceListComponents.0-based.txt  faceListComponents.out.txt  faceListComponents.txt  maxPlanar5.0-based.txt.ColorVertices.out.txt  maxPlanar5.0-based.txt.DrawPlanar.out.txt  maxPlanar5.0-based.txt.DrawPlanar.out.txt.render.txt  (+12 more)
devEnvSetupAndDefaults/: devEnvSetup.sh
tags/Version 2.2.0/: graphK4Search.h  graphK4Search.private.h  planarity.c  planarityCommandLine.c
trunk/c/: .cproject  appconst.h  graph.h  graphColorVertices.c  graphColorVertices.h  graphColorVertices.private.h  graphColorVertices_Extensions.c  graphDFSUtils.c  (+40 more)
wiki/: DownloadBuildNotes.wiki  DrawPlanar.wiki  EclipseCodeContribution.wiki  EclipseSetup.wiki  History.wiki  PageName.wiki  Roadmap.wiki  TestResultsForVersion200.wiki  TestResultsForVersion210.wiki  TestResultsForVersion220.wiki
(+234 files in other folders)
