samplesdir = @docdir@/samples

dist_samples_DATA = \
  Petersen.0-based.txt \
  Petersen.0-based.txt.ColorVertices.out.txt \
  Petersen.0-based.txt.K23Search.out.txt \
  Petersen.0-based.txt.K33Search.out.txt \
  Petersen.0-based.txt.K4Search.out.txt \
  Petersen.0-based.txt.OuterplanarEmbed.out.txt \
  Petersen.0-based.txt.PlanarEmbed.out.txt \
  Petersen.txt \
  Petersen.txt.ColorVertices.out.txt \
  Petersen.txt.K23Search.out.txt \
  Petersen.txt.K33Search.out.txt \
  Petersen.txt.K4Search.out.txt \
  Petersen.txt.OuterplanarEmbed.out.txt \
  Petersen.txt.PlanarEmbed.out.txt \
  drawExample.0-based.txt \
  drawExample.0-based.txt.ColorVertices.out.txt \
  drawExample.0-based.txt.DrawPlanar.out.txt \
  drawExample.0-based.txt.DrawPlanar.out.txt.render.txt \
  drawExample.txt \
  drawExample.txt.ColorVertices.out.txt \
  drawExample.txt.DrawPlanar.out.txt \
  drawExample.txt.DrawPlanar.out.txt.render.txt \
  maxPlanar5.0-based.txt \
  maxPlanar5.0-based.txt.ColorVertices.out.txt \
  maxPlanar5.0-based.txt.DrawPlanar.out.txt \
  maxPlanar5.0-based.txt.DrawPlanar.out.txt.render.txt \
  maxPlanar5.0-based.txt.PlanarEmbed.out.txt \
  maxPlanar5.txt \
  maxPlanar5.txt.ColorVertices.out.txt \
  maxPlanar5.txt.DrawPlanar.out.txt \
  maxPlanar5.txt.DrawPlanar.out.txt.render.txt \
  maxPlanar5.txt.PlanarEmbed.out.txt